fix signout issue on mobile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Digital Sports Cards</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXJ_muC_0ocFCSVSgDjAeA5Sabcvbo9lY&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_PLACES_API_KEY%&libraries=places"></script>
   </head>
   <body>
     <div id="root"></div>
