add favicon to page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Digital Sports Cards</title>
+    <link rel="icon" type="image/png" href="/assets/titan-icon.png" />
     <script src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_PLACES_API_KEY%&libraries=places"></script>
   </head>
   <body>
